@@ -2,14 +2,12 @@ package io.github.georgecodes.benchmarking.orchestrator.application;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 import jakarta.enterprise.context.ApplicationScoped;
-import lombok.Getter;
+import jakarta.inject.Inject;
 import lombok.extern.jbosslog.JBossLog;
-import org.eclipse.microprofile.config.inject.ConfigProperty;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
@@ -24,14 +22,12 @@ public class EnvFileService {
     /**
      * Date-time formatter for backup file timestamps.
      */
-    private static final DateTimeFormatter BACKUP_TIMESTAMP_FORMAT = 
+    private static final DateTimeFormatter BACKUP_TIMESTAMP_FORMAT =
             DateTimeFormatter.ofPattern("yyyyMMdd_HHmmss");
 
-    /**
-     * Path to the environment configuration file.
-     */
-    @ConfigProperty(name = "orchestrator.project-paths.workspace.env")
-    String envFilePath;
+    /** Strongly-typed project-path configuration. */
+    @Inject
+    ProjectPathsConfig paths;
 
     /**
      * Retrieves the content of the environment file.
@@ -40,9 +36,10 @@ public class EnvFileService {
      * @throws EnvFileException if file cannot be read
      */
     public EnvFileContent readEnvFile() {
+        String envFilePath = paths.workspace().env();
         try {
-            Path path = Paths.get(envFilePath);
-            
+            Path path = Path.of(envFilePath);
+
             if (!Files.exists(path)) {
                 log.warnf("Environment file not found at: %s", path.toAbsolutePath());
                 throw new EnvFileException("Environment file not found", EnvFileException.Type.NOT_FOUND);
@@ -50,11 +47,11 @@ public class EnvFileService {
 
             String content = Files.readString(path);
             log.infof("Successfully read environment file from: %s", path.toAbsolutePath());
-            
+
             return new EnvFileContent(content, path.toAbsolutePath().toString());
         } catch (IOException e) {
             log.errorf(e, "Failed to read environment file: %s", envFilePath);
-            throw new EnvFileException("Failed to read environment file: " + e.getMessage(), 
+            throw new EnvFileException("Failed to read environment file: " + e.getMessage(),
                     EnvFileException.Type.IO_ERROR, e);
         }
     }
@@ -69,10 +66,11 @@ public class EnvFileService {
      */
     public EnvFileUpdate updateEnvFile(String newContent) {
         validateContent(newContent);
-        
+        String envFilePath = paths.workspace().env();
+
         try {
-            Path path = Paths.get(envFilePath);
-            
+            Path path = Path.of(envFilePath);
+
             if (!Files.exists(path)) {
                 log.warnf("Environment file not found at: %s", path.toAbsolutePath());
                 throw new EnvFileException("Environment file not found", EnvFileException.Type.NOT_FOUND);
@@ -80,7 +78,7 @@ public class EnvFileService {
 
             // Create backup
             String backupFilename = createBackup(path);
-            
+
             // Write new content
             Files.writeString(path, newContent);
             log.infof("Successfully updated environment file: %s", path.toAbsolutePath());
@@ -88,7 +86,7 @@ public class EnvFileService {
             return new EnvFileUpdate("Environment file updated successfully", backupFilename);
         } catch (IOException e) {
             log.errorf(e, "Failed to update environment file: %s", envFilePath);
-            throw new EnvFileException("Failed to update environment file: " + e.getMessage(), 
+            throw new EnvFileException("Failed to update environment file: " + e.getMessage(),
                     EnvFileException.Type.IO_ERROR, e);
         }
     }
@@ -145,31 +143,21 @@ public class EnvFileService {
     /**
      * Exception thrown when environment file operations fail.
      */
-    @Getter
+    @SuppressWarnings("LombokGetterMayBeUsed")
     public static class EnvFileException extends RuntimeException {
         /**
          * Type of environment file exception.
          */
         public enum Type {
-            /**
-             * File not found.
-             */
+            /** File not found. */
             NOT_FOUND,
-            /**
-             * I/O error during file operations.
-             */
+            /** I/O error during file operations. */
             IO_ERROR,
-            /**
-             * Content validation error.
-             */
+            /** Content validation error. */
             VALIDATION_ERROR
         }
 
-        /**
-         * The type of exception that occurred.
-         * -- GETTER --
-         *  Gets the exception type.
-         */
+        /** The type of exception that occurred. */
         private final Type type;
 
         /**
@@ -195,5 +183,14 @@ public class EnvFileService {
             this.type = type;
         }
 
+        /**
+         * Gets the exception type.
+         *
+         * @return the exception type
+         */
+        public Type getType() {
+            return type;
+        }
     }
 }
+
